--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
     "version": 2,
-    "name": "name-of-your-vercel-app",
     "builds": [
-      { "src": "./index.js", "use": "@vercel/node" }
+      { "src": "index.js", "use": "@now/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/" } 
+      { "src": "/(.*)", "dest": "index.js" } 
     ]
   }
